# cc-proxy-a

./: .env.example  .gitignore  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: ci.yml  release.yml
crates/cc-proxy-cli/: Cargo.toml
crates/cc-proxy-cli/src/: claude_config.rs  daemon.rs  main.rs
crates/cc-proxy-cli/src/commands/: mod.rs  setup.rs  start.rs  status.rs  stop.rs  test.rs
crates/cc-proxy-core/: Cargo.toml
crates/cc-proxy-core/src/: admin.rs  auth.rs  claude.rs  client.rs  config.rs  dashboard.html  error.rs  history.rs  lib.rs  model_map.rs  request_log.rs  runtime.rs  server.rs  session.rs  stats.rs  token_count.rs
crates/cc-proxy-core/src/convert/: mod.rs  request.rs  response.rs  stream.rs  usage.rs
crates/cc-proxy-core/src/types/: claude.rs  openai.rs
npm/: README.md  bin.js  install.js  package.json
target-verify/: .rustc_info.json
target-verify/release/: cc-proxy.d
target-verify/release/.fingerprint/aho-corasick-b05af3b7933a145a/: lib-aho_corasick  lib-aho_corasick.json
target-verify/release/.fingerprint/anstream-8af2a139ccb57612/: lib-anstream  lib-anstream.json
target-verify/release/.fingerprint/anstyle-81dfeb5e65375fe2/: lib-anstyle  lib-anstyle.json
target-verify/release/.fingerprint/anstyle-parse-1d61d60a7f8dba62/: lib-anstyle_parse  lib-anstyle_parse.json
target-verify/release/.fingerprint/anstyle-query-e52a781747a9aab6/: lib-anstyle_query  lib-anstyle_query.json
target-verify/release/.fingerprint/anstyle-wincon-cb57f29b84d5eab9/: lib-anstyle_wincon  lib-anstyle_wincon.json
target-verify/release/.fingerprint/anyhow-2d126352a742942f/: build-script-build-script-build  build-script-build-script-build.json
target-verify/release/.fingerprint/anyhow-577c880fb81865c8/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-verify/release/.fingerprint/anyhow-78f92faf0e35c53e/: lib-anyhow  lib-anyhow.json
target-verify/release/.fingerprint/async-stream-f91fb7c8f80b2333/: lib-async_stream  lib-async_stream.json
target-verify/release/.fingerprint/async-stream-impl-d47bedab484a9734/: lib-async_stream_impl  lib-async_stream_impl.json
target-verify/release/.fingerprint/atomic-waker-1a2e02be64659922/: lib-atomic_waker  lib-atomic_waker.json
target-verify/release/.fingerprint/axum-3db7fdee5433e27a/: lib-axum  lib-axum.json
target-verify/release/.fingerprint/axum-core-24ad06e0c3275090/: lib-axum_core  lib-axum_core.json
target-verify/release/.fingerprint/base64-ad0b46f18bab648d/: lib-base64  lib-base64.json
target-verify/release/.fingerprint/bit-set-3802e45197b9a86d/: lib-bit_set  lib-bit_set.json
target-verify/release/.fingerprint/bit-vec-63aa735c7cf3ec0c/: lib-bit_vec  lib-bit_vec.json
target-verify/release/.fingerprint/bitflags-e4cdd2b16b3f686c/: lib-bitflags  lib-bitflags.json
(+395 files in other folders)
