[package]
name = "cc-proxy-cli"
description = "CLI tool for cc-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "cc-proxy"
path = "src/main.rs"

[dependencies]
cc-proxy-core = { path = "../cc-proxy-core" }
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
dialoguer.workspace = true
console.workspace = true
dirs.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
[target.'cfg(unix)'.dependencies]
libc.workspace = true
