[package]
name = "cc-proxy-core"
description = "Core proxy engine: Claude API to OpenAI API protocol translation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
reqwest.workspace = true
reqwest-eventsource.workspace = true
serde.workspace = true
serde_json.workspace = true
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
async-stream.workspace = true
bytes.workspace = true
dirs.workspace = true
tiktoken-rs.workspace = true
